fixed : missing margin with classic editor. fox #449

--- a/assets/admin/css/nimble-admin.css
+++ b/assets/admin/css/nimble-admin.css
@@ -300,4 +300,5 @@ body .block-editor .sek-nimble-admin-bar-title {
 #sek-edit-with-nimble.classic-ed {
   position: relative;
   padding: 0 15px!important;
+  margin: 10px 0!important;
 }
